.metals/.reports/metals/2023-10-02/r_scala-toplevel-mtags_15-21-39-629
id: file://<WORKSPACE>/src/main/scala/components/User.scala:[54..59) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/components/User.scala", "package components
import java.io.File
abstract class class Interaction{
    var txt_file: String
    var db_file: String
    def inicializar: Unit = {
        txt_file = display_texts
        db_file = display_databases
    }

    def print_message(string: String): Unit = {
        val greenColor = "\u001B[32m"
        val resetColor = "\u001B[0m"
        println(greenColor + string + resetColor)
    }
    
    def display_texts: String = {
        println("\nWelcome, user! Which File would you like to read?\n")
        val directory_path = new File("src/main/scala/texts")
        val contents = directory_path.list()
        for(i <- 0 until contents.size){
            println(i + "-" + contents(i))
        }
        var chosen = scala.io.StdIn.readInt()
        var file = directory_path.getPath() + "/" + contents(chosen)
        return file
    }

    def display_databases: String = {
        println("\nWhich Database would you like to write?\n")
        val directory_path = new File("src/main/scala/sqlite3/databases")
        val contents = directory_path.list()
        for(i <- 0 until contents.size){
            println(i + "-" + contents(i))
        }
        var chosen = scala.io.StdIn.readInt()
        var database = directory_path.getPath() + "/" + contents(chosen)
        return database
    }
}")
file://<WORKSPACE>/src/main/scala/components/User.scala:3: error: expected identifier; obtained class
abstract class class Interaction{
               ^